
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-02-17 DP  1.4.2  Mask the password when logging the connection string.
2006-02-17 DP  1.4.2  Properly escape single quotes in connection strings.
2006-02-08 DP  1.4.2  Re-arrange the Win32 dependencies so that iconv, libxml2
                      and wxwidgets are located in $PGADIR/../pgadmin3-deps/
2006-02-08 MH  1.6.0  Add a 'Favourites' query organiser to the Query Tool.
                      Note; this adds a dependecy on libxml2 (and iconv).
2006-02-06 DP  1.4.2  Properly enable the redo button in the Query Tool when
                      appropriate, per PromoTrade
2006-02-06 DP  1.6.0  Allow selection and copy of subsets of the columns and 
                      rows in the Edit Grid [Edward Di Geronimo Jr]
2006-02-06 DP  1.6.0  Cleanup if the query tool leaves a transaction in an 
                      error state when the query ends.
2006-02-06 MH  1.6.0  Allow SELECT inside larger transactions in the Query Tool
2006-01-30 AP  1.6.0  Fix inherited columns (don't create/edit them) per Peter
                      Eisentraut.
2006-01-30 MH  1.6.0  Add autocompletion to the Query Tool, based on the logic
                      used by psql. Triggered with Control+Space, and 
                      optionally the Tab key as well.
2006-01-30 DP  1.4.2  Add missing files to the Unix tarball, per Andrus
                      xtra/wxbuild/*, src/utils/precomp.cpp, 
                      src/main/pgAdmin3.rc
2006-01-27 DP  1.6.0  Allow the number of rows shown in the Edit Grid to be 
                      limited and add a 'View top 100 rows' option to the
                      table/view context menus. [Magnus Hagander, Dave Page]