@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-02-19 AP         Rearrange "view data" position in toolbar/menu
+2006-02-19 AP         Revert "Allow SELECT inside xact.." to have messages back
 2006-02-17 DP  1.4.2  Mask the password when logging the connection string.
 2006-02-17 DP  1.4.2  Properly escape single quotes in connection strings.
 2006-02-08 DP  1.4.2  Re-arrange the Win32 dependencies so that iconv, libxml2
